--- a/ECML-2024/Notebooks/part3_clustering.ipynb
+++ b/ECML-2024/Notebooks/part3_clustering.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -47,8 +59,59 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: aeon==0.11.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (0.11.0)\n",
+      "Requirement already satisfied: deprecated>=1.2.13 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (1.2.14)\n",
+      "Requirement already satisfied: numba<0.61.0,>=0.55 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (0.59.1)\n",
+      "Requirement already satisfied: numpy<1.27.0,>=1.21.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (24.1)\n",
+      "Requirement already satisfied: pandas<2.1.0,>=1.5.3 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (2.0.3)\n",
+      "Requirement already satisfied: scikit-learn<1.6.0,>=1.0.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (1.4.2)\n",
+      "Requirement already satisfied: scipy<1.13.0,>=1.9.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (1.12.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from aeon==0.11.0) (4.12.2)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from deprecated>=1.2.13->aeon==0.11.0) (1.16.0)\n",
+      "Requirement already satisfied: llvmlite<0.43,>=0.42.0dev0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from numba<0.61.0,>=0.55->aeon==0.11.0) (0.42.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from pandas<2.1.0,>=1.5.3->aeon==0.11.0) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from pandas<2.1.0,>=1.5.3->aeon==0.11.0) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from pandas<2.1.0,>=1.5.3->aeon==0.11.0) (2024.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from scikit-learn<1.6.0,>=1.0.0->aeon==0.11.0) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from scikit-learn<1.6.0,>=1.0.0->aeon==0.11.0) (3.5.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\code\\aeon-tutorials\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas<2.1.0,>=1.5.3->aeon==0.11.0) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.1.2 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
+      "A subdirectory or file data already exists.\n",
+      "Error occurred while processing: data.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "execution_count": 1,
    "source": [
     "!pip install aeon==0.11.0\n",
     "!mkdir -p data\n",
@@ -79,7 +142,7 @@
     "warnings.filterwarnings(\"ignore\")"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -93,80 +156,21 @@
     "from aeon.registry import  all_estimators\n",
     "\n",
     "all_estimators(\n",
-    "    \"classifier\", filter_tags={\"algorithm_type\": \"distance\"}, as_dataframe=True\n",
+    "    \"clusterer\", as_dataframe=True\n",
     ")"
    ],
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "                             name  \\\n",
-       "0                 ElasticEnsemble   \n",
-       "1  KNeighborsTimeSeriesClassifier   \n",
-       "2                 ProximityForest   \n",
-       "3                   ProximityTree   \n",
-       "\n",
-       "                                           estimator  \n",
-       "0  <class 'aeon.classification.distance_based._el...  \n",
-       "1  <class 'aeon.classification.distance_based._ti...  \n",
-       "2  <class 'aeon.classification.distance_based._pr...  \n",
-       "3  <class 'aeon.classification.distance_based._pr...  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>estimator</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ElasticEnsemble</td>\n",
-       "      <td>&lt;class 'aeon.classification.distance_based._el...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>KNeighborsTimeSeriesClassifier</td>\n",
-       "      <td>&lt;class 'aeon.classification.distance_based._ti...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ProximityForest</td>\n",
-       "      <td>&lt;class 'aeon.classification.distance_based._pr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ProximityTree</td>\n",
-       "      <td>&lt;class 'aeon.classification.distance_based._pr...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
+      "text/plain": "                      name                                          estimator\n0           AEFCNClusterer  <class 'aeon.clustering.deep_learning._ae_fcn....\n1        AEResNetClusterer  <class 'aeon.clustering.deep_learning._ae_resn...\n2         Catch22Clusterer  <class 'aeon.clustering.feature_based._catch22...\n3        ClustererPipeline  <class 'aeon.clustering.compose._pipeline.Clus...\n4           DummyClusterer     <class 'aeon.clustering.dummy.DummyClusterer'>\n5         SummaryClusterer  <class 'aeon.clustering.feature_based._summary...\n6         TSFreshClusterer  <class 'aeon.clustering.feature_based._tsfresh...\n7          TimeSeriesCLARA   <class 'aeon.clustering._clara.TimeSeriesCLARA'>\n8        TimeSeriesCLARANS  <class 'aeon.clustering._clarans.TimeSeriesCLA...\n9         TimeSeriesKMeans  <class 'aeon.clustering._k_means.TimeSeriesKMe...\n10      TimeSeriesKMedoids  <class 'aeon.clustering._k_medoids.TimeSeriesK...\n11        TimeSeriesKShape  <class 'aeon.clustering._k_shape.TimeSeriesKSh...\n12       TimeSeriesKShapes  <class 'aeon.clustering._k_shapes.TimeSeriesKS...\n13  TimeSeriesKernelKMeans  <class 'aeon.clustering._kernel_k_means.TimeSe...",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>estimator</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>AEFCNClusterer</td>\n      <td>&lt;class 'aeon.clustering.deep_learning._ae_fcn....</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AEResNetClusterer</td>\n      <td>&lt;class 'aeon.clustering.deep_learning._ae_resn...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Catch22Clusterer</td>\n      <td>&lt;class 'aeon.clustering.feature_based._catch22...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ClustererPipeline</td>\n      <td>&lt;class 'aeon.clustering.compose._pipeline.Clus...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>DummyClusterer</td>\n      <td>&lt;class 'aeon.clustering.dummy.DummyClusterer'&gt;</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>SummaryClusterer</td>\n      <td>&lt;class 'aeon.clustering.feature_based._summary...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>TSFreshClusterer</td>\n      <td>&lt;class 'aeon.clustering.feature_based._tsfresh...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>TimeSeriesCLARA</td>\n      <td>&lt;class 'aeon.clustering._clara.TimeSeriesCLARA'&gt;</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>TimeSeriesCLARANS</td>\n      <td>&lt;class 'aeon.clustering._clarans.TimeSeriesCLA...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>TimeSeriesKMeans</td>\n      <td>&lt;class 'aeon.clustering._k_means.TimeSeriesKMe...</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>TimeSeriesKMedoids</td>\n      <td>&lt;class 'aeon.clustering._k_medoids.TimeSeriesK...</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>TimeSeriesKShape</td>\n      <td>&lt;class 'aeon.clustering._k_shape.TimeSeriesKSh...</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>TimeSeriesKShapes</td>\n      <td>&lt;class 'aeon.clustering._k_shapes.TimeSeriesKS...</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>TimeSeriesKernelKMeans</td>\n      <td>&lt;class 'aeon.clustering._kernel_k_means.TimeSe...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -236,7 +240,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Load example data <a id='load-data'></a>"
+   "source": [
+    "## Load example data <a id='load-data'></a>"
+   ]
   },
   {
    "metadata": {
@@ -250,7 +256,7 @@
     "from aeon.datasets import load_from_tsfile\n",
     "\n",
     "# Load the univariate TSC dataset as a 3D numpy array\n",
-    "X_train_utsc, y_train_utsc = load_from_tsfile(\"./data/KDD_UTSC_TRAIN.ts\", return_type=\"numpy2D\")\n",
+    "X_train_utsc, y_train_utsc = load_from_tsfile(\"./data/KDD_UTSC_TRAIN.ts\")\n",
     "X_test_utsc, y_test_utsc = load_from_tsfile(\"./data/KDD_UTSC_TEST.ts\", return_type=\"numpy2D\")\n",
     "\n",
     "print(\"Train shape:\", X_train_utsc.shape)\n",
@@ -266,7 +272,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -356,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "## Distance functions\n",
     "\n",
     "For our distance measure examples, lets define two different random univariate time series (a and b) with length $m=10$, and plot them."
    ]
