--- a/ECML-2024/Notebooks/part2_classification_regression.ipynb
+++ b/ECML-2024/Notebooks/part2_classification_regression.ipynb
@@ -42,7 +42,12 @@
     "* [Interval-based](#interval)\n",
     "* [Shapelet-based](#shapelet)\n",
     "* [Convolution-based](#convolution)\n",
-    "* [Dictionary-based](#dictionary)"
+    "* [Dictionary-based](#dictionary)\n",
+    "* [Deep learning](#deep)\n",
+    "* [Hybrids](#hybrid)\n",
+    "* [Benchmarking](#benchmark)\n",
+    "* [Interfacing with `scikit-learn` utilities](#sklearn)\n",
+    "* [Further information](#further)"
    ],
    "id": "6fd069badc357f9f"
   },
@@ -2714,7 +2719,7 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    " The canonical interval forest (DrCIF) [[4]](#references) extends from the time series forest (TSF) algorithm. In addition to the three summary statistics used by TSF, CIF makes use of the features from the Catch22 transformation. To increase the diversity of the ensemble, the number of TSF and Catch22 attributes is randomly subsampled per tree, selecting eight by default. Intervals remain randomly selected. DrCIF makes use of multiple series representations. The series is transformed into a periodogram and first order differences representations, and intervals are extracted from there as well.\n",
+    " The canonical interval forest (DrCIF) extends from the time series forest (TSF) algorithm. In addition to the three summary statistics used by TSF, CIF makes use of the features from the Catch22 transformation. To increase the diversity of the ensemble, the number of TSF and Catch22 attributes is randomly subsampled per tree, selecting eight by default. Intervals remain randomly selected. DrCIF makes use of multiple series representations. The series is transformed into a periodogram and first order differences representations, and intervals are extracted from there as well.\n",
     "\n",
     "The `DrCIFClassifier` class is an `aeon` classifier for the DrCIF algorithm, `DrCIFRegressor` is the regression variant.\n",
     "\n",
@@ -4356,7 +4361,7 @@
     "from aeon.classification.deep_learning import InceptionTimeClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "it_clf = InceptionTimeClassifier(random_state=42)\n",
+    "it_clf = InceptionTimeClassifier(n_classifiers=2, n_epochs=500, random_state=42)\n",
     "it_clf.fit(X_train_clf, y_train_clf)\n",
     "it_clf_pred = it_clf.predict(X_test_clf)\n",
     "accuracy_score(y_test_clf, it_clf_pred)"
@@ -4369,43 +4374,260 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Benchmarking\n",
+    "## Hybrids <a id='hybrid'></a>\n",
     "\n",
-    "To come!"
+    "Hybrid approaches combine multiple algorithms from the above categories in an attempt to create a more powerful model."
+   ],
+   "id": "78d3ed1d62f529dd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from aeon.registry import all_estimators\n",
+    "\n",
+    "all_estimators(\n",
+    "    \"classifier\", filter_tags={\"algorithm_type\": \"hybrid\"}, as_dataframe=True\n",
+    ")"
+   ],
+   "id": "ea15c0ef86ee6e76",
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "all_estimators(\n",
+    "    \"regressor\", filter_tags={\"algorithm_type\": \"hybrid\"}, as_dataframe=True\n",
+    ")"
+   ],
+   "id": "d01b04fb31064024",
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "HIVE-COTE v2 is a hybrid ensemble that combines the Arsenal, STC, DrCIF, and TDE algorithms. It uses a weighted voting system to combine the probabilities of the individual classifiers. To save time, we set a 30 second time limit on the runtime in the following cell.",
+   "id": "b438b649e9492adc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from aeon.classification.hybrid import HIVECOTEV2\n",
+    "\n",
+    "hc2 = HIVECOTEV2(time_limit_in_minutes=0.5, random_state=42)\n",
+    "hc2.fit(X_train_clf, y_train_clf)\n",
+    "\n",
+    "print(\"GunPoint accuracy:\", hc2.score(X_test_clf, y_test_clf))\n",
+    "print(\"STC weight = \" + str(hc2.stc_weight_))\n",
+    "print(\"DrCIF weight = \" + str(hc2.drcif_weight_))\n",
+    "print(\"Arsenal weight = \" + str(hc2.arsenal_weight_))\n",
+    "print(\"TDE weight = \" + str(hc2.tde_weight_))"
+   ],
+   "id": "cfab2df53b3cc03c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The `ClassifierEnsemble` and `RegressorEnsemble` classes can be used to combine multiple classifiers and regressors of your choosing into an ensemble..",
+   "id": "bc9c5b3745d3f1d3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from aeon.classification.interval_based import TimeSeriesForestClassifier\n",
+    "from aeon.classification.convolution_based import RocketClassifier\n",
+    "from aeon.classification.feature_based import FreshPRINCEClassifier\n",
+    "from aeon.classification.compose._ensemble import ClassifierEnsemble\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "ens = [TimeSeriesForestClassifier(), RocketClassifier(), FreshPRINCEClassifier()]\n",
+    "ens_clf = ClassifierEnsemble(ens, weights=[0.2, 0.3, 0.4])\n",
+    "ens_clf.fit(X_train_clf, y_train_clf)\n",
+    "ens_clf_pred = ens_clf.predict(X_test_clf)\n",
+    "accuracy_score(y_test_clf, ens_clf_pred)"
+   ],
+   "id": "6a66e920e6ed2179"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from aeon.regression.interval_based import TimeSeriesForestRegressor\n",
+    "from aeon.regression.convolution_based import RocketRegressor\n",
+    "from aeon.regression.feature_based import FreshPRINCERegressor\n",
+    "from aeon.regression.compose._ensemble import RegressorEnsemble\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "ens = [TimeSeriesForestRegressor(), RocketRegressor(), FreshPRINCERegressor()]\n",
+    "ens_reg = RegressorEnsemble(ens, weights=[0.2, 0.3, 0.4])\n",
+    "ens_reg.fit(X_train_reg, y_train_reg)\n",
+    "ens_reg_pred = ens_reg.predict(X_test_reg)\n",
+    "mean_squared_error(y_test_reg, ens_reg_pred)"
+   ],
+   "id": "62bc552361a06d0f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from aeon.visualisation import plot_scatter_predictions\n",
+    "\n",
+    "plot_scatter_predictions(y_test_reg, ens_reg_pred)"
+   ],
+   "id": "d1ba79bbdf3df737"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Benchmarking <a id='benchmarking'></a>\n",
+    "\n",
+    "Below we show the performance of some of the classifiers we have introduced in this notebook on the UCR TSC archive datasets using results from a large scale comparison of TSC algorithms. The results files are stored on [timeseriesclassification.com](timeseriesclassification.com).\n",
+    "\n",
+    "While we do not currently have regression results available to loading like this, we hope to add this soon."
    ],
    "id": "58c8df98421c8199"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "# code here",
+   "source": [
+    "from aeon.benchmarking import get_estimator_results_as_array\n",
+    "from aeon.datasets.tsc_datasets import univariate\n",
+    "\n",
+    "names = [\n",
+    "    \"FreshPRINCE\",\n",
+    "    \"HIVECOTEV2\",\n",
+    "    \"InceptionTime\",\n",
+    "    \"WEASEL-D\",\n",
+    "    \"MR-Hydra\",\n",
+    "    \"RDST\",\n",
+    "    \"QUANT\",\n",
+    "    \"PF\", \n",
+    "    \"1NN-DTW\",\n",
+    "]\n",
+    "results, present_names = get_estimator_results_as_array(\n",
+    "    names, univariate, include_missing=False\n",
+    ")\n",
+    "results.shape"
+   ],
    "id": "f0a15759dcd3e9f0",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.mean(results, axis=0)"
+   ],
+   "id": "cf910af17c532a41"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from aeon.visualisation import plot_critical_difference\n",
+    "\n",
+    "plot_critical_difference(results, names)"
+   ],
+   "id": "ab45e9dfc0f86ee8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from aeon.visualisation import plot_boxplot\n",
+    "\n",
+    "plot_boxplot(results, names, plot_type=\"boxplot\")"
+   ],
+   "id": "42fb7c01449ed634"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Interfacing with `scikit-learn` utilities\n",
+    "## Interfacing with `scikit-learn` utilities <a id='sklearn'></a>\n",
     "\n",
-    "To come!"
+    "`aeon` classifiers and regressors can be used in `scikit-learn` pipelines and utilities. Below we show how to use them in a pipeline and gridsearch as an example."
    ],
    "id": "77e7e0541826e6df"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "# code here",
+   "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from aeon.transformations.collection.feature_based import Catch22\n",
+    "from aeon.transformations.collection.feature_based import SevenNumberSummaryTransformer\n",
+    "from sklearn.pipeline import FeatureUnion\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "pipe = make_pipeline(\n",
+    "    FeatureUnion([(\"C22\", Catch22(replace_nans=True)), (\"SNS\", SevenNumberSummaryTransformer())]),\n",
+    "    RandomForestClassifier(random_state=42)\n",
+    ")\n",
+    "\n",
+    "pipe.fit(X_train_clf, y_train_clf)\n",
+    "pipe_preds = pipe.predict(X_test_clf)\n",
+    "accuracy_score(y_test_clf, pipe_preds)"
+   ],
    "id": "eb6fa967375988d9",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from aeon.classification.convolution_based import RocketClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "param_grid = {\n",
+    "    \"num_kernels\" : [100, 1000, 10000],\n",
+    "    \"max_dilations_per_kernel\" : [16, 32, 64],\n",
+    "}\n",
+    "\n",
+    "gs = GridSearchCV(\n",
+    "    RocketClassifier(rocket_transform=\"minirocket\", random_state=42),\n",
+    "    param_grid,\n",
+    ")\n",
+    "gs.fit(X_train_clf, y_train_clf)\n",
+    "gs_preds = gs.predict(X_test_clf)\n",
+    "accuracy_score(y_test_clf, gs_preds)"
+   ],
+   "id": "3a6d470d7888d754"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Further information\n",
+    "## Further information <a id='further'></a>\n",
     "\n",
     "There is a lot of information avaiable in the `aeon` documentation:\n",
     "\n",
@@ -4428,16 +4650,6 @@
     "If you find anything wrong or unclear in the `aeon` documentation, please raise an issue on GitHub or mention it on Slack, we welcome new contributors."
    ],
    "id": "5778827befc33141"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "## References\n",
-    "\n",
-    "To come!"
-   ],
-   "id": "163093c8986beb9c"
   }
  ],
  "metadata": {
