--- a/ECML-2024/Notebooks/part3_clustering.ipynb
+++ b/ECML-2024/Notebooks/part3_clustering.ipynb
@@ -596,7 +596,7 @@
     "\n",
     "`aeon` contains distance based algorithms that use medoids (train instances) rather\n",
     "than centroids. This avoids the need to average for centroids. It means a precomputed\n",
-    " distance matrix can be used. This can speed things up, althougg it carries a memory\n",
+    " distance matrix can be used. This can speed things up, although it carries a memory\n",
     " overhead.\n",
     "\n",
     "There are different approaches to medoid based clustering, and this is not generally\n",
@@ -720,7 +720,7 @@
    "source": [
     "# Distance functions\n",
     "\n",
-    "Distance functions are a fundamental primitive imn TSML. For our\n",
+    "Distance functions are a fundamental primitive in TSML. For our\n",
     "distance measure\n",
     "examples, lets define two different random univariate time series (a and b) with length $m=10$, and plot them."
    ]
